--- a/GameProject/MortarGame/MortarGame/MortarGame.vcxproj.filters
+++ b/GameProject/MortarGame/MortarGame/MortarGame.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="Boss.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Globals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Crosshair.png">
